# clip-tool

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml
