[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-tool"
version = "1.0.0"
description = "Voice-activated screen clipper for Windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sexigt", email = "bravesulfur35@gmail.com"},
]
keywords = ["screen-recording", "clip", "voice-control", "obs", "clipper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "numpy",
    "opencv-python",
    "bettercam",
    "mss",
    "Pillow",
    "faster-whisper",
    "pyaudiowpatch",
    "pystray",
    "plyer",
    "customtkinter",
    "keyboard",
]

[project.urls]
Homepage = "https://github.com/Sexigt/clip-tool"
Repository = "https://github.com/Sexigt/clip-tool"
Issues = "https://github.com/Sexigt/clip-tool/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.include-package-data]
true = true
